<resources>
    <string name="app_name">ui</string>
    <string name="content_description" translatable="false">Content description</string>
    <string name="pay">Send %1$s</string>
    <string name="delegate_format">Delegate %1$s</string>
    <string name="select_source">Select source transfer</string>
    <string name="select_recipient">Select recipient</string>
    <string name="select_daily_spending_limit_contract">Daily spending limit contract</string>
    <string name="select_default_contract">Default contract</string>
    <string name="select_source_title">Select source</string>
    <string name="select_destination_title">Select destination</string>
    <string name="address_book_title">Address book</string>
    <string name="transfer_title">Transfer</string>
    <string name="card_expiration">Expiry date</string>
    <string name="amount_default" translatable="false">0.05</string>
    <string name="amount">Amount</string>
    <string name="deposit_amount">Deposit amount</string>
    <string name="limit_1_to_1k">Daily spending limit (from 1 to 1000 ꜩ)</string>
    <string name="gas">Gas (default value)</string>
    <string name="fee_minimum">Fee (calculated minimum)</string>
    <string name="delegate">Delegate</string>
    <string name="confirm_edition">Confirm the edition</string>
    <string name="remove_delegate">Remove delegate</string>
    <string name="fee">Fee</string>
    <string name="fees_default">0.001</string>
    <string name="public_key_hash">Public Key Hash</string>
    <string name="item_address">Address</string>
    <string name="contract_address">Contract address</string>
    <string name="mnemonic_info">You need to backup these 24 english words in a safe place in case you need to recover your accounts.</string>
    <string name="mnemonic_info_title">Here is your Wallet mnemonics</string>
    <string name="public_key_info_title">Here is your Address</string>
    <string name="address_book_empty_title">Your address book is empty</string>
    <string name="contracts_empty_title">You don\'t have any contract</string>
    <string name="public_key_info_empty_title">You have no public key</string>
    <string name="account_info_empty_title">You cannot delegate</string>
    <string name="delegate_title">Delegate</string>
    <string name="script_title">Script</string>
    <string name="limits_title">Limits</string>
    <string name="address_book_empty_info_title">Please fill in your address book by clicking on the add button</string>
    <string name="contracts_empty_info_title">Please create a contract and delegate your tez by clicking on the add button</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="create_wallet_title_1">Create Wallet 1/2</string>
    <string name="create_wallet_title_2">Create Wallet 2/2</string>
    <string name="next_step_button">Next step</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="add_address_title">Add an address</string>
    <string name="add_delegate_title">Add a delegate</string>
    <string name="add_limits_title">Add a contract limit</string>
    <string name="delegation_title">Delegation</string>
    <string name="receive_title">Receive</string>
    <string name="restore_wallet_info">Please fill your 24 english words in the right order to recover your accounts.</string>
    <string name="verify_creation_wallet_info">Please fill these 6 random words from the mnemonics to make sure you have previously noted it.</string>
    <string name="add_address_info">Please complete this form to add an address.</string>
    <string name="mnemonics_backed_up">I wrote the 24 words on a piece of paper.</string>
    <string name="word_info">Word #%1$d</string>
    <string name="copied_pkh">Copied public key hash</string>
    <string name="copied_your_pkh">Copied your public key hash</string>
    <string name="copied">Copied %1$s</string>
    <string name="delegate_address_info">Please fill the form to delegate your tez. This will create a KT1 address and delegate it to the tz1 delegate address you choose.</string>
    <string name="contract_limits_info">Please fill the form to create a smart contract</string>
    <string name="redelegate_address_info">Please fill the form to delegate your tez to your chosen baker\'s address.</string>
    <string name="no_baker_at_the_moment">You do not have a baker at the moment.</string>
    <string name="remove_delegate_info">Your current baker\'s address:</string>
    <string name="remove_delegate_info_address">%1$s</string>
    <string name="no_script_info">The script linked to this address is the default delegation contract one.</string>
    <string name="contract_storage_info">Your current contract\'s storage informations</string>
    <string name="create_restore_wallet_info">Please create or restore a wallet to get your public key.</string>
    <string name="key_management_info">Please create or restore a wallet.</string>
    <string name="create_restore_wallet_delegate_info">Please create or restore a wallet to be able to delegate your tez.</string>
    <string name="create_restore_wallet_transfer_info">Please create or restore a wallet to transfer tez.</string>
    <string name="no_mnemonics_found">Please restore your 24 words in key management to transfer tez from your tz1 account.</string>
    <string name="no_mnemonics_contracts">Please restore your 24 words in key management to create contracts.</string>
    <string name="no_mnemonics_refill_tz3">Please restore your 24 words in keys management to send tez from your tz1 account.</string>
    <string name="no_mnemonics_delegate">Please restore your 24 words in key management to be able to remove or change your current baker.</string>
    <string name="no_mnemonics_transfers">Please restore your 24 words in key management to be able to make transfers from this address.</string>
    <string name="no_mnemonics_script">Please restore your 24 words in key management to update your contract\'s storage informations.</string>
    <string name="no_mnemonics_send_cents">Please restore your 24 words in key management to send a few cents to your secure enclave key.</string>
    <string name="restore_your_24_words_info">Restore your 24 words to be able to transfer tez from your main tz1 account and standard KT1 contracts, create new contracts and remove or change your bakers.\n\n\However you can still transfer tez from your Daily Spending Limit contracts if this device is linked to them.\n\nThe Log Out button removes all of your data from this device.</string>
    <string name="remove_your_24_words_info">You can remove your Master Key from this device as a safety mesure. Please keep your 24 words in a safe place to recover it.\n\nBy doing this, you won\'t be able to transfer tez from your main tz1 account or standard KT1 contracts, you won\'t be able to create new contracts or remove/change your bakers.\n\nHowever you can still transfer tez from your Daily Spending Limit contracts if this device is linked to them.\n\nThe Log Out button removes all of your data from this device.</string>
    <string name="tap_to_copy_info">Tap to copy your address or share it with the sender via email or text.</string>
    <string name="slc_available_soon">The SLC contract will be available soon. More information on the blog:\nhttps://blog.nomadic-labs.com/category/cortez.html</string>
    <string name="not_mnemonics_expected">These 24 words are valid but not those expected to restore the current account.</string>
    <string name="share">Share</string>
    <string name="send_10_cents">Send 0.1 ꜩ to it</string>
    <string name="send">Send 0.1 ꜩ</string>
    <string name="contact_us">Contact us</string>
    <string name="restore_your_24_words">Restore your 24 words</string>
    <string name="remove_your_24_words">Remove your master key</string>
    <string name="informations">Informations</string>
    <string name="share_via">Share via</string>
    <string name="wallet_successfully_created">Wallet successfully created!</string>
    <string name="wallet_successfully_restored">Wallet successfully restored!</string>
    <string name="delegation_successfully_deleted">Delegation successfully deleted!</string>
    <string name="delegate_successfully_added">Delegate successfully added!</string>
    <string name="transfer_succeed">Transfer succeed!</string>
    <string name="log_out_succeed">Log out succeed!</string>
    <string name="master_key_removed">Master Key removed from device.</string>
    <string name="address_owner">Address owner</string>
    <string name="address_owner_placeholder">John Doe</string>
    <string name="address_pkh">Address (Public key hash)</string>
    <string name="address_pkh_placeholder">tz…</string>
    <string name="transfer">Transfer</string>
    <string name="receive">Receive</string>
    <string name="address_book">Address book</string>
    <string name="address_delegate">Delegate address</string>
    <string name="secure_enclave_generated">Secure enclave key (automatically generated)</string>
    <string name="secure_enclave">Secure enclave key</string>
    <string name="daily_spending_limit_from_0_to_1k">Daily spending limit (from 0 to 1000 ꜩ)</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="key_management_title">Key management</string>
    <string name="exit_button">Log Out</string>
    <string name="privacy">Privacy and Security</string>
    <string name="cortez_for_android">Cortez for Android</string>
    <string name="about_version">Version %1$s</string>
    <string name="balance_title">Balance</string>
    <string name="operations_title">Operations</string>
    <string name="last_operations_title">Latest operations</string>
    <string name="create_contract">Create the contract</string>
    <string name="about">About</string>
    <string name="key_management">Key management</string>
    <string name="exit">Exit</string>
    <string name="exit_info">Are you sure you want to exit?</string>
    <string name="alert_deleting_address">Deleting address</string>
    <string name="alert_deleting_address_body">Are you sure that you want to delete this address?</string>
    <string name="alert_exit_account">Log Out</string>
    <string name="alert_remove_master_key">Remove Master Key</string>
    <string name="alert_exit_acccount_body">Please make sure you still have your 24 words list on a piece of paper or your data will be lost forever.</string>
    <string name="alert_remove_master_key_body">Your Master Key will be removed. Please make sure you still have your 24 words list on a piece of paper or your data will be lost forever.</string>
    <string name="address_successfully_added">Address successfully added!</string>
    <string name="dsl_successfully_added">Daily Spending Limit successfully created!</string>
    <string name="address_successfully_delegated">KT1 address successfully added and delegated!</string>
    <string name="address_successfully_scanned">Address successfully scanned!</string>
    <string name="neutral">-</string>
    <string name="one">1</string>
    <string name="tez">ꜩ</string>
    <string name="authentication_password">Password</string>
    <string name="authentication_password_description">Enter your password to continue</string>
    <string name="authentication_fingerprint_new_enrollment_description">
        A new fingerprint was added to this device, so your password is required.
    </string>
    <string name="authentication_fingerprint_use_in_future">Use fingerprint in the future</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_address_book">Address book</string>
    <string name="tab_receive">Receive</string>
    <string name="tab_contracts">Contracts</string>
    <string name="tab_delegate">Delegate</string>
    <string name="tab_script">Script</string>
</resources>