<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/spacing_double"
    android:background="@drawable/selector_rect_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/public_address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_delegate"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/PaymentScreens.TextAppearance.WordItem"
        tools:ignore="UnusedAttribute,NewApi" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/public_address_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_pkh_placeholder"
        android:drawableRight="@drawable/account_wallet_24"
        android:drawableEnd="@drawable/account_wallet_24"
        android:drawablePadding="@dimen/spacing_double"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:maxLength="36"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/tz_placeholder"
        android:imeOptions="actionNext"
        android:inputType="textPersonName|textNoSuggestions"
        android:textSize="@dimen/size_edit_text" />

    <TextView
        android:id="@+id/amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_double"
        android:text="@string/amount"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/PaymentScreens.TextAppearance.StandardItem"
        tools:ignore="UnusedAttribute,NewApi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_header"
            android:text="@string/tez"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:textAppearance="@style/PaymentScreens.TextAppearance.WordItem"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:clipToPadding="false"
            tools:ignore="UnusedAttribute,NewApi" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edittext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:minWidth="@dimen/spacing_huge"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/amount_default"
            android:inputType="numberDecimal"
            android:textColorHint="@color/tz_placeholder"
            android:maxLength="15"
            android:digits="0123456789."
            android:textSize="@dimen/size_edit_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/gas_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_double"
        android:text="@string/fee_minimum"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/PaymentScreens.TextAppearance.StandardItem"
        tools:ignore="UnusedAttribute,NewApi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_header"
            android:text="@string/tez"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:textAppearance="@style/PaymentScreens.TextAppearance.WordItem"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:clipToPadding="false"
            tools:ignore="UnusedAttribute,NewApi" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fee_edittext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:minWidth="@dimen/spacing_huge"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/neutral"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:textColorHint="@color/tz_placeholder"
            android:maxLength="15"
            android:digits="0123456789."
            android:textSize="@dimen/size_edit_text" />

    </LinearLayout>
</LinearLayout>
