<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DelegateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/PaymentScreens.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/PaymentScreens.PopupOverlay"
        app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorTitleText">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_dashboard" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemReceive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_receive" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemDelegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_delegate" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemScript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_script" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RelativeLayout>
    -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccentSecondary"
        app:srcCompat="@drawable/ic_menu_share"
        app:tint="@color/colorStandardText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccentSecondary"
        app:srcCompat="@drawable/ic_transfers_24"
        app:tint="@color/colorStandardText" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

